data-engineering-101/k8s/nifi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nifi
   namespace: default
spec:
   selector:
      matchLabels:
         app: nifi
   template:
        metadata:
          labels:
            app: nifi     
        spec:
          containers:
             - name: nifi
               image: apache/nifi:1.14.0
               resources:
                  limits:
                     memory: "2Gi"
                     cpu: "500m"
               ports:
               - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-svc
  namespace: default
spec:
  selector:
    app: nifi
  ports:
  - port: 8443
    targetPort: 8443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi
  namespace: default
  labels:
    name: nifi
  annotations:
     kubernetes.io/ingress.class: "nginx"  
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8443"
     nginx.ingress.kubernetes.io/proxy-redirect-from: "https://localhost:8443"
     nginx.ingress.kubernetes.io/proxy-redirect-to: "https://nifi.local"
spec:
  tls:
  - hosts:
    - nifi.local
    secretName: nifi-secret-tls
  rules:
  - host: nifi.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nifi-svc
            port: 
              number: 8443
